[project]
name="se-assistant"
version="0.1.0"
requires-python=">=3.10"
dependencies=[
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev=["pytest>=8.0.0"]

[tools.pytest.ini_options]
pythonpath=["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
